feat: revive Notifee demo for build testing
This exposes / reproduces the problem described in Notifee 1114